# agent-project

./: .gitignore  README.md  agent技术说明文档.md  agent需求说明-agent架构细化.md  agent需求说明-agent部分.md  package.json  pnpm-lock.yaml  turbo.json
.bin/: env
apps/agent/: .env  .env.example  ARCHITECTURE_OPTIMIZATION_PLAN.md  README.md  package.json  tsconfig.json
apps/agent/src/: container.ts  index.ts
apps/agent/src/constants/: models.ts  rules.ts
apps/agent/src/events/: event-bus.ts
apps/agent/src/graphs/: analytics.ts  chat.ts
apps/agent/src/harness/: index.ts
apps/agent/src/tools/: file-parser.tool.ts  image-ocr.tool.ts  (+3 more)
apps/manim-project/: BaseScene.py  demo_scene.py
apps/manim-project/function-tools/: create_formula.py
apps/rag/: .env  .env.example  DEPLOY_QDRANT_TENCENT.md  Makefile  README.md  chunking-optimization-plan.md  pyproject.toml
apps/rag/src/: config.py  main.py
apps/rag/src/embedder/: embedder.py
apps/rag/src/indexer/: chunker.py  document_parser.py  indexer.py  parser_models.py  vector_store.py
apps/rag/src/indexer/chunking/: __init__.py  markdown.py  merge.py  models.py  plain_text.py  service.py  tokenizer.py
apps/rag/src/pipeline/: context_builder.py  query_preprocessor.py  retrieval_pipeline.py
apps/rag/src/reranker/: reranker.py
apps/rag/src/services/: indexer.py  memory_service.py  retriever.py
apps/server/: .env  .env.example  README.md  package.json  tsconfig.json
apps/server/src/: app.service.ts  main.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  main.ts
(+118 files in other folders)
